--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
       # Actions end
       - name: Webhook
         uses: denar90/webhook-action@master
-        env:
+        with:
           webhookUrl: ${{secrets.ACTION_WEBHOOK_URL}}
           data: '{ "gihub": ${{ toJSON(github) }}, "links": ${{steps.LHCIAction.outputs.links}} }'
