--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       # ...
       # Actions end
       - name: Webhook
-        uses: denar90/webhook-action@master
+        uses: denar90/webhook-action@0.1.0
         with:
           webhookUrl: ${{secrets.ACTION_WEBHOOK_URL}}
           data: '{ "gihub": ${{ toJSON(github) }}, "links": ${{steps.LHCIAction.outputs.links}} }'
